# agentroot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL_FROM_SOURCE.md  INSTALL_INSTRUCTIONS.md  LICENSE  LLM_ENHANCEMENT_ANALYSIS.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  TODO.md  VLLM_SETUP.md  WORKFLOW.md  agentroot-env.sh.example  config.yml.example
.claude/: PRINCIPLES.md
.github/workflows/: benchmark.yml
crates/agentroot-cli/: Cargo.toml
crates/agentroot-cli/src/: app.rs  main.rs  progress.rs
crates/agentroot-cli/src/commands/: cleanup.rs  collection.rs  context.rs  embed.rs  get.rs  ls.rs  metadata.rs  mod.rs  pagerank.rs  search.rs  status.rs  update.rs
crates/agentroot-cli/src/output/: csv.rs  files.rs  json.rs  markdown.rs  mod.rs  terminal.rs  xml.rs
crates/agentroot-cli/tests/: collection_tests.rs  document_tests.rs  search_tests.rs  update_embed_tests.rs
crates/agentroot-core/: Cargo.toml
crates/agentroot-core/benches/: indexing.rs  metadata.rs  search.rs
crates/agentroot-core/examples/: README.md  custom_index.rs
crates/agentroot-core/src/: error.rs  lib.rs
crates/agentroot-core/src/config/: mod.rs  virtual_path.rs
crates/agentroot-core/src/db/: chunks.rs  collections.rs  content.rs  context.rs  directories.rs  documents.rs  glossary.rs  memories.rs  metadata.rs  mod.rs  pagerank.rs  schema.rs  sessions.rs  stats.rs  user_metadata.rs  vectors.rs
crates/agentroot-core/src/graph/: link_extractor.rs  mod.rs  pagerank.rs
crates/agentroot-core/src/index/: chunker.rs  embedder.rs  mod.rs  parser.rs  scanner.rs
crates/agentroot-core/src/index/ast_chunker/: language.rs  mod.rs  oversized.rs  parser.rs  types.rs
crates/agentroot-core/src/index/ast_chunker/strategies/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs
crates/agentroot-core/src/llm/: cache.rs  candle_embedder.rs  chunk_metadata_generator.rs  client.rs  download.rs  http_embedder.rs  http_metadata_generator.rs  http_query_expander.rs  http_query_parser.rs  http_reranker.rs  llama.rs  llama_metadata.rs  memory_extractor.rs  metadata_generator.rs  mod.rs  query_parser.rs  strategy_analyzer.rs  traits.rs  workflow_orchestrator.rs
crates/agentroot-core/src/providers/: csv.rs  file.rs  github.rs  json.rs  mod.rs  pdf.rs  sql.rs  url.rs
crates/agentroot-core/src/search/: ann_index.rs  bm25.rs  directory_boost.rs  hybrid.rs  mod.rs  orchestrated.rs  session_aware.rs  smart.rs  snippet.rs  stats.rs  suggestions.rs  tiered.rs  unified.rs  vector.rs  workflow_executor.rs
crates/agentroot-core/tests/: chunk_search_integration_test.rs  glossary_integration_test.rs  metadata_integration_test.rs  smart_search_test.rs  unified_search_test.rs
crates/agentroot-mcp/: Cargo.toml
crates/agentroot-mcp/src/: lib.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/agentroot-mcp/tests/: metadata_tools_test.rs
crates/agentroot-tui/: Cargo.toml
crates/agentroot-tui/src/: app.rs  event.rs  main.rs
crates/agentroot-tui/src/ui/: mod.rs
docs/: README.md  architecture.md  cli-reference.md  custom-metadata-implementation.md  embedding-cache.md  getting-started.md  howto-guide.md  integration-guide.md  mcp-server.md  metadata-example-output.md  metadata-performance.md  metadata-user-guide.md  performance.md  providers.md  semantic-chunking.md  troubleshooting.md
docs/architecture/: agentic-extensions.md
docs/internal/: DEFAULT_ORCHESTRATED_MODE.md  KEYWORD_SEARCH_IMPROVEMENTS.md  ORCHESTRATED_SEARCH_PROOF.md  TUNING_RESULTS.md
examples/: README.md  basic_search.rs  chunk_navigation.rs  chunk_search_demo.rs  csv_provider.rs  custom_index.rs  custom_provider.rs  demo_query_parser.rs  github_provider.rs  glossary_benchmark.rs  glossary_validation.rs  json_provider.rs  metadata_demo.rs  metadata_generation.rs  pdf_provider.rs  semantic_chunking.rs  show_metadata_direct.rs  sql_provider.rs  test_cache.rs  test_glossary_search.rs  url_provider.rs  user_metadata.rs  vector_hybrid_search.rs  workflow_search.rs
scripts/: bench-compare.sh  publish-dry-run.sh  publish.sh
