[package]
name = "agentroot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for agentroot - local markdown search engine"

[[bin]]
name = "agentroot"
path = "src/main.rs"

[dependencies]
agentroot-core.workspace = true
agentroot-mcp.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
lazy_static.workspace = true
termcolor = "1.4"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
