[package]
name = "agentroot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for agentroot - local markdown search engine"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
blake3.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-typescript.workspace = true
glob.workspace = true
walkdir.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
lazy_static.workspace = true
dirs.workspace = true
chrono.workspace = true
llama-cpp-2.workspace = true
reqwest.workspace = true
base64.workspace = true
pdf-extract.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "basic_search"
path = "../../examples/basic_search.rs"

[[example]]
name = "semantic_chunking"
path = "../../examples/semantic_chunking.rs"

[[example]]
name = "custom_index"
path = "../../examples/custom_index.rs"

[[example]]
name = "github_provider"
path = "../../examples/github_provider.rs"

[[example]]
name = "url_provider"
path = "../../examples/url_provider.rs"

[[example]]
name = "custom_provider"
path = "../../examples/custom_provider.rs"

[[example]]
name = "pdf_provider"
path = "../../examples/pdf_provider.rs"

[[example]]
name = "sql_provider"
path = "../../examples/sql_provider.rs"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false

[[example]]
name = "metadata_generation"
path = "../../examples/metadata_generation.rs"

